skill-cards-layout-rework

--- a/index.html
+++ b/index.html
@@ -217,8 +217,10 @@
               <div class="row card-deck-sortable skill__deck">
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">Sharepoint</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">Sharepoint</div>
                     <div class="card-body">
                       <p class="card-text">
                         Creating, supporting modern Sharepoint DMS sites to the
@@ -229,8 +231,12 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">Power Platform</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">
+                      Power Platform
+                    </div>
                     <div class="card-body">
                       <p class="card-text">
                         Creating canvas apps, customizing existing Sharepoint
@@ -241,9 +247,13 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">Working with API-s</div>
-                    <div class="card-body">
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">
+                      Working with API-s
+                    </div>
+                    <div class="card-body bg-transparent">
                       <p class="card-text">
                         Creating and managing AAD Applications, which are using
                         MS Graph and Sharepoint API-s to automate various tasks
@@ -254,8 +264,10 @@
 
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">SPFx</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">SPFx</div>
                     <div class="card-body">
                       <p class="card-text">
                         Adding custom webparts, extensions to Sharepoint using
@@ -269,8 +281,10 @@
               <div class="row d-none card-deck-sortable skill__deck">
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">Python</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">Python</div>
                     <div class="card-body">
                       <p class="card-text">
                         Algorithyms, OOP, Data Analyzing, Deeplearning
@@ -280,8 +294,10 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">SQL</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">SQL</div>
                     <div class="card-body">
                       <p class="card-text">Oracle, MS SQL data managing</p>
                     </div>
@@ -290,8 +306,10 @@
 
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">VBA</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">VBA</div>
                     <div class="card-body">
                       <p class="card-text">
                         Creating small size full-stack desktop apps, data stored
@@ -305,8 +323,10 @@
               <div class="row d-none card-deck-sortable skill__deck">
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">HTML, CSS</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">HTML, CSS</div>
                     <div class="card-body">
                       <p class="card-text">
                         Creating static HTML webpages customized with plain CSS,
@@ -317,8 +337,10 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">Javascript</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">Javascript</div>
                     <div class="card-body">
                       <p class="card-text">
                         FP, OOP, Asynchronous programming, using it for making
@@ -329,8 +351,12 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">Version control</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">
+                      Version control
+                    </div>
                     <div class="card-body">
                       <p class="card-text">Git, Github for managing code</p>
                     </div>
@@ -338,8 +364,12 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">Tools, libraries</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">
+                      Tools, libraries
+                    </div>
                     <div class="card-body">
                       <p class="card-text">
                         Like NPM, Parcel, Leaflet, Web API-s, to make web
@@ -357,7 +387,7 @@
                   <div
                     class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
                   >
-                    <div class="card-header h5">Team-player</div>
+                    <div class="card-header bg-transparent h5">Team-player</div>
                     <div class="card-body">
                       <p class="card-text">
                         A team is as good as working alone, change my mind
@@ -367,8 +397,12 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">Problem solver</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">
+                      Problem solver
+                    </div>
                     <div class="card-body">
                       <p class="card-text">
                         It won't let me rest until I solve it
@@ -378,8 +412,10 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
-                    <div class="card-header h5">Hard-worker</div>
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
+                    <div class="card-header bg-transparent h5">Hard-worker</div>
                     <div class="card-body">
                       <p class="card-text">
                         No unfinished projects, what started needs an end
