project-slider-modifying

--- a/index.html
+++ b/index.html
@@ -484,8 +484,11 @@
                         alt="forkify"
                       />
                       <div class="carousel-caption d-none d-md-block">
-                        <h5>Slide</h5>
-                        <p>Lorem ipsum</p>
+                        <h5>Forkify</h5>
+                        <p>
+                          A copy of the famous application from Jonas
+                          Schmedtmann
+                        </p>
                       </div>
                     </div>
                     <!-- Slide -->
@@ -498,8 +501,8 @@
                       <div
                         class="carousel-caption d-none d-md-block text-white"
                       >
-                        <h5>Slide</h5>
-                        <p>Lorem ipsum</p>
+                        <h5>More to come</h5>
+                        <p>Every project is available on my Github</p>
                       </div>
                     </div>
                   </div>
