skill-slider-customization

--- a/index.html
+++ b/index.html
@@ -451,8 +451,7 @@
         <div class="custom_margintop container">
           <section id="projects" class="hidden section_padding">
             <div class="row">
-              <div class="col-sm-1"></div>
-              <div class="col-sm-10 d-flex justify-content-center">
+              <div class="col-sm-12 d-flex justify-content-center">
                 <div
                   id="carouselExampleCaptions"
                   class="carousel carousel-dark slide"
@@ -483,12 +482,21 @@
                         class="d-block w-100 project_images"
                         alt="forkify"
                       />
-                      <div class="carousel-caption d-none d-md-block">
-                        <h5>Forkify</h5>
-                        <p>
-                          A copy of the famous application from Jonas
-                          Schmedtmann
-                        </p>
+                      <div
+                        class="carousel-caption d-none d-md-block rounded_edges"
+                      >
+                        <div class="row">
+                          <a href="https://rakmate9812-forkify.netlify.app/"
+                            ><img
+                              src="/img/logo.png"
+                              class="forkify_logo"
+                              alt="logo"
+                          /></a>
+                          <p>
+                            A copy of the famous application from Jonas
+                            Schmedtmann
+                          </p>
+                        </div>
                       </div>
                     </div>
                     <!-- Slide -->
@@ -502,7 +510,7 @@
                         class="carousel-caption d-none d-md-block text-white"
                       >
                         <h5>More to come</h5>
-                        <p>Every project is available on my Github</p>
+                        <p>Every project will be available on my Github</p>
                       </div>
                     </div>
                   </div>
@@ -532,7 +540,6 @@
                   </button>
                 </div>
               </div>
-              <div class="col-sm-1"></div>
             </div>
           </section>
         </div>
