footer-buttons-rework

--- a/index.html
+++ b/index.html
@@ -555,6 +555,7 @@
 
                     <button
                       type="button"
+                      id="emailFooter"
                       class="btn btn-primary popover__btn"
                       data-bs-container="body"
                       data-bs-toggle="popover"
@@ -569,12 +570,18 @@
               <div class="col-md-3">
                 <div class="card mb-2">
                   <div class="card-body">
-                    <h5 class="card-title">Contact me on LinkedIn</h5>
-                    <a
-                      href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
-                      class="btn btn-primary"
-                      >Link to go</a
+                    <h5 class="card-title">Give me a call</h5>
+                    <button
+                      type="button"
+                      id="phoneFooter"
+                      class="btn btn-primary popover__btn"
+                      data-bs-container="body"
+                      data-bs-toggle="popover"
+                      data-bs-placement="bottom"
+                      data-bs-content="Copied!"
                     >
+                      Reveal
+                    </button>
                   </div>
                 </div>
               </div>
