--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="script.js"></script>
+    <script
+      defer
+      src="https://kit.fontawesome.com/ea067a8456.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- h Navbar -->
@@ -594,10 +599,19 @@
     </main>
     <!-- h1 Footer -->
     <footer>
-      <div class="pt-3 pb-1 bg_nav_foot">
+      <div class="pt-3 pb-3 bg_nav_foot">
         <div class="container">
           <div class="row">
-            <p class="">© 2023 by Máté Rák</p>
+            <div class="col-sm-6 d-flex fw-lighter text-light">
+              © 2023 by Máté Rák
+            </div>
+            <div class="col-sm-6 d-flex flex-row-reverse align-self-center">
+              <i class="fa-brands fa-github-alt fa-lg"></i>
+              <i
+                class="fa-brands fa-linkedin-in fa-lg"
+                style="margin-right: 15px"
+              ></i>
+            </div>
           </div>
         </div>
       </div>
