different-screen-size-adjusting

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="blurred_backg">
         <div class="about_bg">
           <!-- h2 About -->
-          <div class="custom_margintop container pb-5">
+          <div class="container pb-5">
             <section id="about" class="hidden section_padding">
               <!-- In General -->
               <div class="card mb-5 border-dark" style="max-width: 800px">
