--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     ></script>
   </head>
   <body>
-    <!-- h Navbar -->
+    <!-- Navbar -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg_nav_foot">
       <div class="container">
         <a
@@ -69,7 +69,6 @@
     </nav>
     <main>
       <!-- h Intro -->
-
       <div class="intro_bg pt-5">
         <div class="container">
           <section id="intro" class="hidden">
@@ -455,8 +454,8 @@
             </section>
           </div>
         </div>
-        <!-- h2 Projects -->
         <div class="bottom_shadow pb-3">
+          <!-- h2 Projects -->
           <div class="custom_margintop container">
             <section id="projects" class="hidden section_padding">
               <div class="row">
@@ -558,7 +557,7 @@
               <div class="row">
                 <div class="col-3"></div>
                 <div class="col-md-3">
-                  <div class="card mb-2">
+                  <div class="card mb-2" style="max-width: 30vh">
                     <div class="card-body">
                       <h5 class="card-title">Send me an e-mail</h5>
 
@@ -577,20 +576,21 @@
                   </div>
                 </div>
                 <div class="col-md-3">
-                  <div class="card mb-2">
+                  <div class="card mb-2" style="max-width: 30vh">
                     <div class="card-body">
-                      <h5 class="card-title">Give me a call</h5>
-                      <button
+                      <h5 class="card-title">My CV</h5>
+                      <a
+                        href="https://drive.google.com/file/d/1xEQ27x5xyOe571MBBelj_eXsYTdgAaSy/view?usp=share_link"
                         type="button"
                         id="phoneFooter"
                         class="btn btn-primary popover__btn"
                         data-bs-container="body"
                         data-bs-toggle="popover"
                         data-bs-placement="bottom"
-                        data-bs-content="Copied!"
+                        data-bs-content="Redirecting.."
                       >
-                        Reveal
-                      </button>
+                        Download
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -602,7 +602,7 @@
         </div>
       </div>
     </main>
-    <!-- h1 Footer -->
+    <!-- Footer -->
     <footer>
       <div class="pt-3 pb-3 bg_nav_foot">
         <div class="container">
