--- a/index.html
+++ b/index.html
@@ -72,11 +72,16 @@
       <div class="intro_bg pt-5">
         <div class="container">
           <section id="intro" class="hidden">
-            <div
-              class="d-flex align-items-center justify-content-center intro_style"
-            >
+            <div class="d-flex align-items-center intro_style">
               <div class="card p-4 border-dark">
-                <h1>Intro</h1>
+                <span class="d-flex justify-content-end">
+                  <img
+                    src="img/File.ico"
+                    alt="intro"
+                    style="max-width: 30px; max-height: 30px"
+                  />
+                </span>
+                <h1 class="">Intro</h1>
                 <p>
                   Hi! I would like to introduce myself. My name is Máté, I'm a
                   Junior Web Developer, and this is my self-made portfolio page.
