fixing-intro-icon-and-layout

--- a/index.html
+++ b/index.html
@@ -74,20 +74,26 @@
           <section id="intro" class="hidden">
             <div class="d-flex align-items-center intro_style">
               <div class="card p-4 border-dark">
-                <span class="d-flex justify-content-end">
-                  <img
-                    src="img/File.ico"
-                    alt="intro"
-                    style="max-width: 30px; max-height: 30px"
-                  />
-                </span>
-                <h1 class="">Intro</h1>
-                <p>
-                  Hi! I would like to introduce myself. My name is Máté, I'm a
-                  Junior Web Developer, and this is my self-made portfolio page.
-                  Thank you for navigating here.<br /><br />
-                  Have a good time!
-                </p>
+                <div class="row">
+                  <div class="col-lg-6">
+                    <h1 class="">Intro</h1>
+                  </div>
+                  <div class="col-lg-6">
+                    <span class="d-flex justify-content-end">
+                      <img
+                        src="img/File.ico"
+                        alt="intro"
+                        style="max-width: 30px; max-height: 30px"
+                      />
+                    </span>
+                  </div>
+                  <p>
+                    Hi! I would like to introduce myself. My name is Máté, I'm a
+                    Junior Web Developer, and this is my self-made portfolio
+                    page. Thank you for navigating here.<br /><br />
+                    Have a good time!
+                  </p>
+                </div>
               </div>
             </div>
           </section>
