fixing-forkify-logo

--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
           <div class="custom_margintop container">
             <section id="skills" class="hidden section_padding">
               <!-- Tab navigation -->
-              <div class="card text-center">
-                <div class="card-header">
+              <div class="card text-center very_rounded_edges">
+                <div class="card-header bg-transparent">
                   <ul
                     class="nav nav-tabs card-header-tabs skill__tabs__container"
                   >
@@ -504,18 +504,15 @@
                         <div
                           class="carousel-caption d-none d-md-block rounded_edges"
                         >
-                          <div class="row">
-                            <a href="https://rakmate9812-forkify.netlify.app/"
-                              ><img
-                                src="/img/logo.png"
-                                class="forkify_logo"
-                                alt="logo"
-                            /></a>
-                            <p>
-                              A copy of the famous application from Jonas
-                              Schmedtmann
-                            </p>
-                          </div>
+                          <img
+                            src="/img/logo.png"
+                            class="forkify__logo"
+                            alt="logo"
+                          />
+                          <p>
+                            A copy of the famous application from Jonas
+                            Schmedtmann
+                          </p>
                         </div>
                       </div>
                       <!-- Slide -->
@@ -622,18 +619,18 @@
               © 2023 by Máté Rák
             </div>
             <div class="col-sm-6 d-flex flex-row-reverse align-self-center">
-              <a href="https://github.com/rakmate9812">
-                <i class="fa-brands fa-github-alt fa-lg footer_icons"></i>
-              </a>
-
-              <a
-                href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
-              >
-                <i
-                  class="fa-brands fa-linkedin-in fa-lg footer_icons"
-                  style="margin-right: 15px"
-                ></i>
-              </a>
+              <div style="margin-left: 8px">
+                <a href="https://github.com/rakmate9812">
+                  <i class="fa-brands fa-github-alt fa-lg footer_icons"></i>
+                </a>
+              </div>
+              <div style="margin-right: 8px">
+                <a
+                  href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
+                >
+                  <i class="fa-brands fa-linkedin-in fa-lg footer_icons"></i>
+                </a>
+              </div>
             </div>
           </div>
         </div>
