separating-intersections-in-about-section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- h Intro -->
       <div class="intro_bg pt-5">
         <div class="container">
-          <section id="intro" class="hidden">
+          <section id="intro" class="intersection hidden">
             <div class="d-flex align-items-center intro_style">
               <div class="card p-4 border-dark">
                 <div class="row">
@@ -103,34 +103,36 @@
         <div class="about_bg">
           <!-- h2 About -->
           <div class="container pb-5">
-            <section id="about" class="hidden section_padding">
+            <section id="about" class="section_padding">
               <!-- In General -->
-              <div class="card mb-5 border-dark" style="max-width: 800px">
-                <div class="row g-0">
-                  <div class="col-lg-3">
-                    <img
-                      src="img\general.png"
-                      class="img-fluid rounded-start p-4"
-                      alt="general"
-                    />
-                  </div>
-                  <div class="col-lg-9">
-                    <div class="card-body">
-                      <h5 class="card-title">In General</h5>
-                      <p class="card-text">
-                        I am a 24 year old, young, ambitious guy from Hungary. I
-                        grew up in a small town in the heart of Zemplén,
-                        Sárospatak, with my loving family. I went to school
-                        there and moved to Debrecen in 2018. For 4 years I
-                        attended to The University of Debrecen, after that I
-                        stayed in the city, and started my career here.
-                      </p>
+              <div class="intersection hidden">
+                <div class="card mb-5 border-dark" style="max-width: 800px">
+                  <div class="row g-0">
+                    <div class="col-lg-3">
+                      <img
+                        src="img\general.png"
+                        class="img-fluid rounded-start p-4"
+                        alt="general"
+                      />
+                    </div>
+                    <div class="col-lg-9">
+                      <div class="card-body">
+                        <h5 class="card-title">In General</h5>
+                        <p class="card-text">
+                          I am a 24 year old, young, ambitious guy from Hungary.
+                          I grew up in a small town in the heart of Zemplén,
+                          Sárospatak, with my loving family. I went to school
+                          there and moved to Debrecen in 2018. For 4 years I
+                          attended to The University of Debrecen, after that I
+                          stayed in the city, and started my career here.
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
               <!-- Education -->
-              <div class="offset-lg-4">
+              <div class="intersection hidden offset-lg-4">
                 <div class="card mb-5 border-dark" style="max-width: 800px">
                   <div class="row g-0">
                     <div class="col-lg-9">
@@ -160,28 +162,33 @@
                 </div>
               </div>
               <!-- Experience -->
-              <div class="card border-dark" style="max-width: 700px">
-                <div class="row g-0">
-                  <div class="col-lg-4">
-                    <img
-                      src="img\exp.png"
-                      class="img-fluid rounded-start p-4"
-                      alt="exp"
-                    />
-                  </div>
-                  <div class="col-lg-8">
-                    <div class="card-body">
-                      <h5 class="card-title">Experience</h5>
-                      <p class="card-text">
-                        I started working as a Trainee at a nice, small, family
-                        like company as a manual tester in February, 2022. After
-                        I got my degree, I got hired as a Junior Sharepoint
-                        developer, and started working full-time in September,
-                        2022. I learnt lots of various things about
-                        web-development, and worked with different technology
-                        types. I still work for this company now, as of
-                        <span id="today"></span>.
-                      </p>
+              <div class="intersection hidden">
+                <div
+                  class="intersection hidden card border-dark"
+                  style="max-width: 700px"
+                >
+                  <div class="row g-0">
+                    <div class="col-lg-4">
+                      <img
+                        src="img\exp.png"
+                        class="img-fluid rounded-start p-4"
+                        alt="exp"
+                      />
+                    </div>
+                    <div class="col-lg-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Experience</h5>
+                        <p class="card-text">
+                          I started working as a Trainee at a nice, small,
+                          family like company as a manual tester in February,
+                          2022. After I got my degree, I got hired as a Junior
+                          Sharepoint developer, and started working full-time in
+                          September, 2022. I learnt lots of various things about
+                          web-development, and worked with different technology
+                          types. I still work for this company now, as of
+                          <span id="today"></span>.
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -190,7 +197,7 @@
           </div>
           <!-- h2 Skills -->
           <div class="custom_margintop container">
-            <section id="skills" class="hidden section_padding">
+            <section id="skills" class="intersection hidden section_padding">
               <!-- Tab navigation -->
               <div class="card text-center very_rounded_edges">
                 <div class="card-header bg-transparent">
@@ -468,7 +475,7 @@
         <div class="bottom_shadow pb-3">
           <!-- h2 Projects -->
           <div class="custom_margintop container">
-            <section id="projects" class="hidden section_padding">
+            <section id="projects" class="intersection hidden section_padding">
               <div class="row">
                 <div class="col-sm-12 d-flex justify-content-center">
                   <div
@@ -561,7 +568,7 @@
           </div>
           <!-- h2 Contact -->
           <div class="custom_margintop container">
-            <section id="contact" class="hidden">
+            <section id="contact" class="intersection hidden">
               <div class="row">
                 <div class="col-3"></div>
                 <div class="col-md-3">
