progress-bar-adding

--- a/index.html
+++ b/index.html
@@ -201,42 +201,66 @@
               <!-- Tab navigation -->
               <div class="card text-center very_rounded_edges">
                 <div class="card-header bg-transparent">
-                  <ul
-                    class="nav nav-tabs card-header-tabs skill__tabs__container"
-                  >
-                    <li class="nav-item">
-                      <a
-                        class="nav-link active skill__tab rounded_top_edges"
-                        href="#"
-                        data-tab="1"
-                        >work</a
+                  <div class="row">
+                    <div class="col-lg-4">
+                      <ul
+                        class="nav nav-tabs card-header-tabs skill__tabs__container"
+                        style="max-width: 500px"
                       >
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        class="nav-link skill__tab rounded_top_edges"
-                        href="#"
-                        data-tab="2"
-                        >school</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        class="nav-link skill__tab rounded_top_edges"
-                        href="#"
-                        data-tab="3"
-                        >self-learnt</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        class="nav-link skill__tab rounded_top_edges"
-                        href="#"
-                        data-tab="4"
-                        >soft</a
-                      >
-                    </li>
-                  </ul>
+                        <li class="nav-item">
+                          <a
+                            class="nav-link active skill__tab rounded_top_edges"
+                            href="#"
+                            data-tab="1"
+                            >work</a
+                          >
+                        </li>
+                        <li class="nav-item">
+                          <a
+                            class="nav-link skill__tab rounded_top_edges"
+                            href="#"
+                            data-tab="2"
+                            >school</a
+                          >
+                        </li>
+                        <li class="nav-item">
+                          <a
+                            class="nav-link skill__tab rounded_top_edges"
+                            href="#"
+                            data-tab="3"
+                            >self-learnt</a
+                          >
+                        </li>
+                        <li class="nav-item">
+                          <a
+                            class="nav-link skill__tab rounded_top_edges"
+                            href="#"
+                            data-tab="4"
+                            >soft</a
+                          >
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-lg-8 m-auto">
+                      <div class="progress text-center">
+                        <div
+                          class="progress-bar"
+                          role="progressbar"
+                          style="
+                            width: 75%;
+                            background-image: linear-gradient(
+                              to right,
+                              #386de0,
+                              rgb(33, 87, 206)
+                            );
+                          "
+                          aria-valuenow="25"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                        ></div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div
                   class="card-body justify-content-center d-flex skill__deck__container"
