--- a/index.html
+++ b/index.html
@@ -10,26 +10,22 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       defer
-      src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-    ></script>
+      src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script defer src="script.js"></script>
     <script
       defer
       src="https://kit.fontawesome.com/ea067a8456.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- Navbar -->
@@ -37,8 +33,7 @@
       <div class="container">
         <a
           href=""
-          class="navbar-brand mb-0 h1 fst-italic p-2 bg-success rounded_edges"
-        >
+          class="navbar-brand mb-0 h1 fst-italic p-2 bg-success rounded_edges">
           {logo} my Portfolio</a
         >
         <button
@@ -48,8 +43,7 @@
           class="navbar-toggler"
           aria-controls="navbarId"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarId">
@@ -83,8 +77,7 @@
                       <img
                         src="img/File.ico"
                         alt="intro"
-                        style="max-width: 30px; max-height: 30px"
-                      />
+                        style="max-width: 30px; max-height: 30px" />
                     </span>
                   </div>
                   <p>
@@ -112,8 +105,7 @@
                       <img
                         src="img\general.png"
                         class="img-fluid rounded-start p-4"
-                        alt="general"
-                      />
+                        alt="general" />
                     </div>
                     <div class="col-lg-9">
                       <div class="card-body">
@@ -155,8 +147,7 @@
                       <img
                         src="img\education.png"
                         class="img-fluid rounded-end position-relative p-4"
-                        alt="edu"
-                      />
+                        alt="edu" />
                     </div>
                   </div>
                 </div>
@@ -165,15 +156,13 @@
               <div class="intersection hidden">
                 <div
                   class="intersection hidden card border-dark"
-                  style="max-width: 700px"
-                >
+                  style="max-width: 700px">
                   <div class="row g-0">
                     <div class="col-lg-4">
                       <img
                         src="img\exp.png"
                         class="img-fluid rounded-start p-4"
-                        alt="exp"
-                      />
+                        alt="exp" />
                     </div>
                     <div class="col-lg-8">
                       <div class="card-body">
@@ -202,11 +191,10 @@
               <div class="card text-center very_rounded_edges">
                 <div class="card-header bg-transparent">
                   <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-sm-6">
                       <ul
                         class="nav nav-tabs card-header-tabs skill__tabs__container"
-                        style="max-width: 500px"
-                      >
+                        style="max-width: 500px">
                         <li class="nav-item">
                           <a
                             class="nav-link active skill__tab rounded_top_edges"
@@ -241,7 +229,7 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="col-lg-8 m-auto">
+                    <div class="col-sm-6 m-auto">
                       <div class="progress text-center">
                         <div
                           class="progress-bar"
@@ -256,22 +244,21 @@
                           "
                           aria-valuenow="25"
                           aria-valuemin="0"
-                          aria-valuemax="100"
-                        ></div>
+                          aria-valuemax="100">
+                          Higher is better
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div
-                  class="card-body justify-content-center d-flex skill__deck__container"
-                >
+                  class="card-body justify-content-center d-flex skill__deck__container">
                   <!-- Work card deck -->
                   <div class="row card-deck-sortable skill__deck">
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           Sharepoint
                         </div>
@@ -286,8 +273,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           Power Platform
                         </div>
@@ -302,8 +288,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           Working with API-s
                         </div>
@@ -320,8 +305,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">SPFx</div>
                         <div class="card-body d-flex">
                           <p class="card-text m-auto">
@@ -337,8 +321,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">Python</div>
                         <div class="card-body d-flex">
                           <p class="card-text m-auto">
@@ -350,8 +333,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">SQL</div>
                         <div class="card-body d-flex">
                           <p class="card-text m-auto">
@@ -364,8 +346,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">VBA</div>
                         <div class="card-body d-flex">
                           <p class="card-text m-auto">
@@ -381,8 +362,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           HTML, CSS
                         </div>
@@ -397,8 +377,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           Javascript
                         </div>
@@ -413,8 +392,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           Version control
                         </div>
@@ -428,8 +406,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           Tools, libraries
                         </div>
@@ -448,8 +425,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           Team-player
                         </div>
@@ -463,8 +439,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           Problem solver
                         </div>
@@ -478,8 +453,7 @@
                     <!-- Card -->
                     <div class="col-auto">
                       <div
-                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
-                      >
+                        class="card skill_card text-dark bg-light mb-4 very_rounded_edges">
                         <div class="card-header bg-transparent h5">
                           Hard-worker
                         </div>
@@ -506,8 +480,7 @@
                     id="carouselExampleCaptions"
                     class="carousel carousel-dark slide"
                     data-bs-ride="carousel"
-                    style="max-width: 1000px"
-                  >
+                    style="max-width: 1000px">
                     <div class="carousel-indicators">
                       <button
                         type="button"
@@ -515,14 +488,12 @@
                         data-bs-slide-to="0"
                         class="active"
                         aria-current="true"
-                        aria-label="Slide 1"
-                      ></button>
+                        aria-label="Slide 1"></button>
                       <button
                         type="button"
                         data-bs-target="#carouselExampleCaptions"
                         data-bs-slide-to="1"
-                        aria-label="Slide 2"
-                      ></button>
+                        aria-label="Slide 2"></button>
                     </div>
                     <div class="carousel-inner very_rounded_edges">
                       <!-- Slide -->
@@ -530,16 +501,13 @@
                         <img
                           src="img/forkify.png"
                           class="d-block w-100 project_images"
-                          alt="forkify"
-                        />
+                          alt="forkify" />
                         <div
-                          class="carousel-caption d-none d-md-block rounded_edges"
-                        >
+                          class="carousel-caption d-none d-md-block rounded_edges">
                           <img
                             src="/img/logo.png"
                             class="forkify__logo"
-                            alt="logo"
-                          />
+                            alt="logo" />
                           <p>
                             A copy of the famous application from Jonas
                             Schmedtmann
@@ -551,11 +519,9 @@
                         <img
                           src="img/github.jpg"
                           class="d-block w-100 project_images"
-                          alt="github"
-                        />
+                          alt="github" />
                         <div
-                          class="carousel-caption d-none d-md-block text-white"
-                        >
+                          class="carousel-caption d-none d-md-block text-white">
                           <h5>More to come</h5>
                           <p>Every project will be available on my Github</p>
                         </div>
@@ -565,24 +531,20 @@
                       class="carousel-control-prev"
                       type="button"
                       data-bs-target="#carouselExampleCaptions"
-                      data-bs-slide="prev"
-                    >
+                      data-bs-slide="prev">
                       <span
                         class="carousel-control-prev-icon"
-                        aria-hidden="true"
-                      ></span>
+                        aria-hidden="true"></span>
                       <span class="visually-hidden">Previous</span>
                     </button>
                     <button
                       class="carousel-control-next"
                       type="button"
                       data-bs-target="#carouselExampleCaptions"
-                      data-bs-slide="next"
-                    >
+                      data-bs-slide="next">
                       <span
                         class="carousel-control-next-icon"
-                        aria-hidden="true"
-                      ></span>
+                        aria-hidden="true"></span>
                       <span class="visually-hidden">Next</span>
                     </button>
                   </div>
@@ -607,8 +569,7 @@
                         data-bs-container="body"
                         data-bs-toggle="popover"
                         data-bs-placement="bottom"
-                        data-bs-content="Copied!"
-                      >
+                        data-bs-content="Copied!">
                         Copy adress
                       </button>
                     </div>
@@ -626,8 +587,7 @@
                         data-bs-container="body"
                         data-bs-toggle="popover"
                         data-bs-placement="bottom"
-                        data-bs-content="Redirecting.."
-                      >
+                        data-bs-content="Redirecting..">
                         Download
                       </a>
                     </div>
@@ -657,8 +617,7 @@
               </div>
               <div style="margin-right: 8px">
                 <a
-                  href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
-                >
+                  href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/">
                   <i class="fa-brands fa-linkedin-in fa-lg footer_icons"></i>
                 </a>
               </div>
