--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="col-sm-6 m-auto">
+                    <!-- <div class="col-sm-6 m-auto">
                       <div class="progress text-center">
                         <div
                           class="progress-bar"
@@ -244,7 +244,7 @@
                           Higher is better
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
                 <!-- Card body -->
